cmake_minimum_required(VERSION 2.6)
project(FLUIDINFO)
set(CORE_CPP ${FLUIDINFO_SOURCE_DIR}/fluidinfo)
set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -Xlinker -zmuldefs")
set(CMAKE_CXX_FLAGS "-g -DFLUID_DEBUG")
find_package(CURL)
#find_package(JSON)
add_subdirectory(${FLUIDINFO_SOURCE_DIR}/fluidinfo)
add_subdirectory(${FLUIDINFO_SOURCE_DIR}/tests)
